[Improve] sync code from branch 2.1.4 (#3729)
* [Impove] sync from 2.1.4

* [Improve] CommonService rename to ServiceHelper

* [Improve] application entity drop appId column

* [Improve] DingTalk alert bug fixed

* [Improve] license header improvement

* [Improve] token FE page improvement

* [Improve] sql query "like" bug fixed.

* [Improve] PermissionScope annotation user field default value bug fixed.

* [Improve] freemarker bug fixed.

* [Improve] token page minor improvement

* [Improve] trivial improvements

---------

Co-authored-by: benjobs <benjobx@gmail.com>