@@ -17,6 +17,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
+-server
 -Xms1g
 -Xmx1g
 -Xmn512m
@@ -33,3 +34,5 @@
 -XX:GCLogFileSize=50M
 -XX:NumberOfGCLogFiles=10
 
+# solved jdk1.8+ dynamic loading of resources to the classpath issue, if jdk > 1.8, you can enable this parameter
+#--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED
